<resources>
    <string name="app_name">Flash</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="linkedin">Linkedin</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="social_media_tabs">Social Media tabs</string>

    <string name="facebook_app_id">2359567940856774</string>
    <string name="post">Post</string>
    <string name="write_a_new_post">Write a new Post</string>
    <string name="facebook_logo">Facebook Logo</string>


</resources>