<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.FacebookFragment"
    android:padding="32dp">

    <Button
        android:id="@+id/post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/post_multiline_tv"
        app:layout_constraintTop_toTopOf="@+id/post_multiline_tv" />

    <EditText
        android:id="@+id/post_multiline_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/new_post_tv"
        app:layout_constraintTop_toBottomOf="@+id/new_post_tv"
        android:autofillHints="Start writing soemthing..." />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="112dp"
        android:layout_height="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/facebook_logo"
        android:contentDescription="@string/facebook_logo" />

    <TextView
        android:id="@+id/new_post_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/write_a_new_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:labelFor="@+id/post_multiline_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>